# dicom-viewer

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  build.bat  build.sh  run.sh
src/: main.cpp
src/core/: dicom_image.cpp  dicom_image.hpp  dicom_metadata.cpp  dicom_metadata.hpp  error_codes.hpp  result.hpp
src/infrastructure/: dcmtk_wrapper.cpp  dcmtk_wrapper.hpp
src/ui/: main_window.cpp  main_window.hpp
